@@ -127,8 +127,8 @@ public class Fighter_BodyToss extends MonkSkill
 				int dist=2+getXLEVELLevel(mob);
 				if(mob.location().maxRange()<2)
 					dist=mob.location().maxRange();
-				mob.setAtRange(dist);
-				target.setAtRange(dist);
+				mob.setRangeToTarget(dist);
+				target.setRangeToTarget(dist);
 				CMLib.combat().postDamage(mob,target,this,CMLib.dice().roll(1,12,0),CMMsg.MASK_ALWAYS|CMMsg.TYP_JUSTICE,Weapon.TYPE_BASHING,"The hard landing <DAMAGE> <T-NAME>!");
 				if(mob.getVictim()==null) mob.setVictim(null); // correct range
 				if(target.getVictim()==null) target.setVictim(null); // correct range
