@@ -140,9 +140,9 @@ public class Prayer_HolyWind extends Prayer
 
 							final MOB victim=target.getVictim();
 							if((victim!=null)&&(target.rangeToTarget()>=0))
-								target.setAtRange(target.rangeToTarget()+(howLong/2));
+								target.setRangeToTarget(target.rangeToTarget()+(howLong/2));
 							if(target.rangeToTarget()>target.location().maxRange())
-								target.setAtRange(target.location().maxRange());
+								target.setRangeToTarget(target.location().maxRange());
 							mob.location().send(mob,msg);
 							if((!CMLib.flags().isInFlight(target))
 							&&(CMLib.dice().rollPercentage()>(((target.charStats().getStat(CharStats.STAT_DEXTERITY)*2)+target.phyStats().level()))-(5*howLong))
@@ -153,7 +153,7 @@ public class Prayer_HolyWind extends Prayer
 								success=maliciousAffect(mob,target,asLevel,howLong,-1)!=null;
 							}
 							if(target.getVictim()!=null)
-								target.getVictim().setAtRange(target.rangeToTarget());
+								target.getVictim().setRangeToTarget(target.rangeToTarget());
 							if(mob.getVictim()==null) mob.setVictim(null); // correct range
 							if(target.getVictim()==null) target.setVictim(null); // correct range
 						}
