@@ -90,6 +90,13 @@ This spell can be cast on any weapon.  It will cause the weapon to fly \
 around the caster, attacking any of the casters enemies.  Leaving the \
 room will end the spell.
 
+SPELL_ANTI_PLANT_SHELL=<ABILITY>\
+Usage    : CAST "ANTI PLANT SHELL" [TARGET]\n\r\
+Example  : cast "anti plant shell" bob\n\r\
+This spell creates a force field around the target into which an aggressive \
+plant may not advance.  The field will repel plant monsters and keep them at \
+bay, but will collapse under continuous assault.
+
 SPELL_ARCANE_POSSESSION=<ABILITY>\
 Usage    : CAST "ARCANE POSSESSION" [ITEM]\n\r\
 Example  : cast "arcane possession" gloves\n\r\
